# rewards-management-system-api

./: .gitignore  Dockerfile  Endpoints_Documentaton.md  Procfile  README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  requirements_local.txt
RMS/: .env.example  settings.py  urls.py
authentication/: models.py  permissions.py  serializers.py  urls.py  util.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_is_ta.py  0003_user_course.py
courses/: admin.py  filters.py  models.py  serializer.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_rewads_reward.py  0002_auto_20211027_2255.py  0002_initial.py  0003_alter_rewads_reward.py  0004_alter_rewads_reward.py
main/: admin.py  models.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_alter_points_reward.py  0003_alter_points_reward.py  0004_alter_points_reward.py  0005_alter_points_reward.py  0006_alter_points_reward.py
main/tests/: test_setup.py  test_views.py
points/: admin.py  models.py  serializers.py  urls.py  views.py
points/migrations/: 0001_initial.py  0002_auto_20211020_0150.py  0003_auto_20211020_0256.py  0004_alter_point_prize.py  0005_alter_point_prize.py
rewards_project/: asgi.py  settings.py  urls.py  wsgi.py
users/: custom_claims.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20211102_1416.py
